# profilediverter

./: .gitignore  CMakeLists.txt  Diversion.cpp  DiversionManager.cpp  DiversionService.h
scripts/: install.sh
scripts/config/systemd/user/: profile-offload.service
scripts/config/systemd/user/default.target.wants/: profile-offload.service
scripts/local/share/: move-jetb.sh  profdiv.sh
src/managerapp/: Diversion.h  DiversionManager.cpp  DiversionService.cpp
src/managerapp/glade/: diverter.glade
